--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./public/stylesheets/style.css">
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./public/javascript/APIHandler.js"></script>
-  <script type="text/javascript" src="./public/javascript/index.js"></script>
   <title>IH Characters</title>
 </head>
+
 <body>
+
+
   <section class="container">
     <h1>Ironhack Characters API</h1>
     <div class="characters-container">
@@ -35,9 +35,10 @@
         <input type="text" name="character-id-delete">
         <button id="delete-one">Delete one</button>
       </div>
-
     </section>
   </section>
+
+
   <section class="container">
     <section class="form-container">
       <h2>New Character</h2>
@@ -61,6 +62,8 @@
         <button id="send-data">Create</button>
       </form>
     </section>
+
+
     <section class="form-container">
       <h2>Edit Character</h2>
       <form id="edit-character-form" class="character-form">
@@ -88,6 +91,18 @@
       </form>
     </section>
   </section>
+
+<section class="form-container">
+  <div class="character-list"></div>
+</section>
+
+
+
+
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="./public/javascript/APIHandler.js"></script>
+  <script type="text/javascript" src="./public/javascript/index.js"></script>
 
 </body>
 </html>
